# traj_generator

./: .dockerignore  .gitignore  COMMANDS.md  Dockerfile  README.md  config.json  docker-compose.yml  filter.ipynb  filter_rebuilt.ipynb  log.txt  log2  log3  pyproject.toml
scripts/: generator.py  generator_cli.py  generator_io.py  generator_llm.py  generator_prompting.py  generator_sharding.py  generator_trajectories.py  train_filter_rebuilt.py
src/: configs.py
src/data/: __init__.py  generated_trajectories.py  physical_datasets.py
src/filter/: __init__.py  data_simulation.py  dpf.py  likelihood.py  mlp.py  physics.py  train_filter_rebuilt_config.py
src/traj_generator/: __init__.py  config.py  main.py  pipeline.py
tests/: generated_trajectories_tests.py  physical_data_tests.py  smoke_pipeline.py
