[project]
name = "traj-generator"
version = "0.1.0"
description = "Configurable LLM prompt and trajectory generator using vLLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vllm>=0.6.0",
]

[project.scripts]
traj-generate = "traj_generator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
