[project]
name = "traj-generator"
version = "0.1.0"
description = "Configurable LLM prompt and trajectory generator using vLLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vllm>=0.6.0",
  "transformers>=4.40.0",
  "tqdm>=4.66.0",
  "tensorboard>=2.16.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This project uses a non-standard src/ layout where the Python packages that
# scripts/tests import live directly under `src/` (e.g. `src/filter` -> `import filter`).
# Hatch can't reliably auto-detect what to ship, so we configure it explicitly.
packages = ["src/filter", "src/data"]

[tool.hatch.build.targets.wheel.force-include]
"src/configs.py" = "configs.py"

[tool.uv]
package = true
